@@ -33,6 +33,7 @@ class grocery_CRUD_Model  extends CI_Model  {
 	protected $table_name = null;
 	protected $relation = array();
 	protected $relation_n_n = array();
+	protected $primary_keys = array();
 	
 	function __construct()
     {
@@ -81,6 +82,13 @@ class grocery_CRUD_Model  extends CI_Model  {
     	$results = $this->db->get($this->table_name)->result();
     	
     	return $results;
+    }
+    
+    public function set_primary_key($field_name, $table_name = null)
+    {
+    	$table_name = $table_name === null ? $this->table_name : $table_name;
+    	
+    	$this->primary_keys[$table_name] = $field_name;
     }
     
     protected function relation_n_n_queries($select)
@@ -447,6 +455,11 @@ class grocery_CRUD_Model  extends CI_Model  {
     {
     	if($table_name == null)
     	{
+    		if(isset($this->primary_keys[$this->table_name]))
+    		{
+    			return $this->primary_keys[$this->table_name];
+    		}
+    		
 	    	if(empty($this->primary_key))
 	    	{
 		    	$fields = $this->get_field_types_basic_table();
@@ -468,6 +481,11 @@ class grocery_CRUD_Model  extends CI_Model  {
     	}
     	else
     	{
+    		if(isset($this->primary_keys[$table_name]))
+    		{
+    			return $this->primary_keys[$table_name];
+    		}
+    		
 	    	$fields = $this->get_field_types($table_name);
 	    	
 	    	foreach($fields as $field)
